<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:id="@+id/square"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/transitionChoiceGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/navigateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/toEndSceneChip"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toEndScene" />

        <com.google.android.material.chip.Chip
            android:id="@+id/toEndConstraints"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toEndConstraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/constraints"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constraints" />

        <com.google.android.material.chip.Chip
            android:id="@+id/animators"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animators" />

        <com.google.android.material.chip.Chip
            android:id="@+id/viewTweens"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewTweens" />

        <com.google.android.material.chip.Chip
            android:id="@+id/customAnimator"
            style="@style/Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customAnimator" />
    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/navigateButton"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_arrow_forward"
        android:tint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</merge>